# ImageToPdf

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
resources/: README.txt  make_icon.py
src/imagetopdf/: __init__.py  __main__.py  app.py  config.py  logging_setup.py  worker.py
src/imagetopdf/core/: __init__.py  converter.py  decoder.py  pdf_builder.py  scanner.py  update.py
src/imagetopdf/ui/: __init__.py  main_window.py  strings.py  theme.py  widgets.py
tests/: conftest.py  test_converter.py  test_decoder.py  test_pdf_builder.py  test_scanner.py
